--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,8 @@
 
 	<properties>
 		<java.version>1.8</java.version>
+		<sonar.organization>tu-organization-key</sonar.organization>
+		<sonar.projectKey>tu-project-key</sonar.projectKey>
 	</properties>
 
 	<dependencies>
@@ -43,7 +45,14 @@
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
+			<plugin>
+				<groupId>org.sonarsource.scanner.maven</groupId>
+				<artifactId>sonar-maven-plugin</artifactId>
+				<version>3.9.1.2184</version> <!-- Utiliza la versión más reciente del plugin -->
+			</plugin>
 		</plugins>
+
 	</build>
+
 
 </project>
