--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -12,8 +12,8 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Checkout del código
-    - uses: actions/checkout@v2
+    - name: Checkout del codigo
+      uses: actions/checkout@v2
     - name: Otorgar permisos de ejecución a mvnw
       run: chmod +x mvnw
     - name: Set up JDK 8
