--- a/pom.xml
+++ b/pom.xml
@@ -50,6 +50,11 @@
 				<artifactId>sonar-maven-plugin</artifactId>
 				<version>3.9.1.2184</version> <!-- Utiliza la versión más reciente del plugin -->
 			</plugin>
+			<plugin>
+  				<groupId>org.jacoco</groupId>
+  				<artifactId>jacoco-maven-plugin</artifactId>
+  				<version>0.8.12-SNAPSHOT</version>
+			</plugin>
 		</plugins>
 
 	</build>
