--- a/pom.xml
+++ b/pom.xml
@@ -16,8 +16,8 @@
 
 	<properties>
 		<java.version>1.8</java.version>
-		<sonar.organization>tu-organization-key</sonar.organization>
-		<sonar.projectKey>tu-project-key</sonar.projectKey>
+		<sonar.organization>eli21noe</sonar.organization>
+		<sonar.projectKey>eli21noe_ms-elizabethsari-java</sonar.projectKey>
 	</properties>
 
 	<dependencies>
