--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -1,4 +1,4 @@
-name: Docker Image CI
+name: CI/CD Pipeline
 on:
   push:
     branches: [ "feature-ms-elizabethSari-mensaje" ]
@@ -19,7 +19,8 @@ jobs:
       with:
           java-version: '1.8'
           distribution: 'adopt'
-          
+    - name: Run the Maven verify phase
+      run: mvn --batch-mode --update-snapshots verify  
     - name: Add coverage to PR
       id: jacoco
       uses: madrapps/jacoco-report@v1.6.1
