--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -7,7 +7,7 @@ on:
 
 jobs:
   build:
-    runs-on: ubuntu-latest
+    runs-on: self-hosted  # Esto indica que el trabajo se ejecutará en un runner alojado por ti
 
     steps:
     - name: Checkout del codigo
