--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -38,3 +38,15 @@ jobs:
         password: ${{ secrets.DOCKER_PASS }}
         repository: elizabethsariu/ms-java-esari
         tags: latest, ${{ github.run_number }}
+    
+    - name: Set up Minikube
+      uses: appleboy/setup-minikube@v1  # Configura Minikube
+    - name: Load Docker image into Minikube
+      run: |
+        # Carga la imagen de Docker en Minikube
+        # Antes de ejecutar este comando, asegúrate de que Minikube esté iniciado
+        eval $(minikube docker-env)
+        docker tag my-container-image:latest minikube:my-container-image
+        kubectl apply -f minikube/deployment.yaml  # Asegúrate de tener tu archivo de deployment en la ruta adecuada
+
+  
