--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -46,7 +46,7 @@ jobs:
         # Carga la imagen de Docker en Minikube
         # Antes de ejecutar este comando, asegúrate de que Minikube esté iniciado
         eval $(minikube docker-env)
-        docker tag my-container-image:latest minikube:my-container-image
-        kubectl apply -f minikube/deployment.yaml  # Asegúrate de tener tu archivo de deployment en la ruta adecuada
+        docker tag ms-java-esari:latest minikube:ms-java-esari
+        kubectl apply -f deployment.yaml  # Asegúrate de tener tu archivo de deployment en la ruta adecuada
 
   
