--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -41,6 +41,6 @@ jobs:
     
     - name: Set up Minikube
       run: |
-        kubectl apply -f ./deployment.yaml  # Asegúrate de tener tu archivo de deployment en la ruta adecuada
+        kubectl apply -f ms-elizabethsari-java/deployment.yaml  # Asegúrate de tener tu archivo de deployment en la ruta adecuada
 
   
